# desktop

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  daemon.rs  db.rs  lib.rs  main.rs  ollama.rs  registry.rs  tray.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/agent/: layout.tsx
src/app/agent/dashboard/: page.tsx
src/app/agent/earnings/: page.tsx
src/app/agent/groups/: page.tsx
src/app/agent/settings/: page.tsx
src/app/agent/tasks/: page.tsx
src/app/setup/: page.tsx
src/components/layout/: mode-toggle.tsx  sidebar.tsx
src/lib/: store.ts  tauri.ts  utils.ts
src/types/: colabbot.ts
