[package]
name = "colabbot"
version = "0.1.0"
description = "ColabBot Desktop — P2P AI Collaboration Network"
authors = ["Einssoft AG"]
edition = "2021"

[lib]
name = "colabbot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "colabbot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Crypto (for signing results)
ring = "0.17"
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
